--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,51 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/*Solution*/
+body {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.footer, .header {
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 16px;
+}
+
+.footer {
+  background: #eee;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.left-links {
+  display: flex;
+  align-items: flex-start;
+  }
+
+button {
+  padding: 8px 16px;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+
