--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,63 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/*Solution*/
+body {
+  display: flex;
+  flex-direction: column;  
+}
+
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0px 16px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.body {
+  display: flex;
+  flex: 1;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+
+.card {
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
+}
+
+.container {
+  display: flex;
+  padding: 32px;
+  flex-wrap: wrap;
+}
